# hippocampus

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  Cargo-backup.toml  Cargo.toml  Cargo.toml.backup  Dockerfile  README.md  build.rs  docker-compose.cli.yml  docker-compose.yml  hippocampus.db  package-lock.json  package.json  tsconfig.json
dashboard/: package-lock.json  package.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  EXAMPLES.md  GRPC_WEBSOCKET_ARCHITECTURE.md  PERSISTENCE.md  QUICK_START.md  README.md  REST_API.md
examples/: api_demo.sh  persistent_database.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
installer/: LICENSE.txt  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
leafmind_hp.db/: 000009.sst  000017.sst  000025.sst  000033.sst  000041.sst  000049.sst  000057.sst  000065.sst  IDENTITY  LOG  LOG.old.1760800021368656  LOG.old.1760800138059872  LOG.old.1760800267676567  LOG.old.1760800355144021  LOG.old.1760800474646054  LOG.old.1760800732927527  LOG.old.1760808300296754  MANIFEST-000061  OPTIONS-000055
proto/: leafmind.proto
qdrant/: raft_state.json
scripts/: patch-for-pkg.js  pkg-fix.sh
src/: answer.ts  associative.ts  benchmark.ts  chunk.ts  client-test.ts  conceptSync.ts  config.ts  consolidate.ts  consolidation.rs  contextBuilder.ts  db.ts  embed.ts  embedMany.ts  forgetting.rs  index.ts  ingest.ts  lib.rs  llmChunk.ts  main.rs  memory_graph.rs  parser.ts  persistence.rs  persistent_memory.rs  plasticity.rs  progress.ts  recall.rs  retrieve.ts  segment.ts  server.ts  (+6 more)
(+142 files in other folders)
