[package]
name = "leafmind"
version = "0.1.0"
edition = "2021"
description = "A hippocampus-inspired neuromorphic memory system"
authors = ["Hiren <hiren@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

# Persistence dependencies - using latest version to fix LLVM 16 compatibility
rocksdb = "0.24.0"
bincode = "1.3"

# Server infrastructure

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"

# WebSocket dependencies
tokio-tungstenite = "0.20"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "leafmind-grpc-server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "leafmind-hybrid-server"
path = "src/bin/hybrid_server.rs"

[[bin]]
name = "simple-test"
path = "src/bin/simple-test.rs"